<resources>

    <string name="app_name">我的小蜜</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="copyright">Copyright © 2019 YangCheng All Rights Reserved.</string>
    <string name="welcome">欢迎回来</string>
    <string name="my_share">我的小蜜，你的贴身小秘书，赶快来一起玩吧！</string>
    <string name="my_name">作者：一起去旅行</string>
    <string name="my_telephone">电话：18948726396</string>
    <string name="my_email">Email：457768396@qq.com</string>
    <string name="back">返回</string>
    <string name="no_data">当前还没有数据哦~</string>
    <string name="username">@string/app_name</string>
    <string name="email">我的邮箱</string>
    <string name="signature">人生若只如初见，何事秋风悲画扇。</string>
    <string name="bookmarks">我的书签</string>
    <string name="scan">扫一扫</string>
    <string name="shark">摇一摇</string>
    <string name="games">小游戏</string>
    <string name="settings">设置</string>
    <string name="menu_news">新闻</string>
    <string name="menu_tools">小工具</string>
    <string name="menu_mm">小蜜</string>
    <string name="menu_me">我的</string>
    <string name="menu_share_friend">分享给微信好友</string>
    <string name="menu_share_line">分享到朋友圈</string>
    <string name="menu_open_browser">用浏览器打开</string>
    <string name="menu_copy_url">复制链接地址</string>
    <string name="menu_add_bookmark">添加到我的书签</string>
    <string name="menu_message">最新消息</string>
    <string name="menu_normal_web">常用网站</string>
    <string name="menu_study_web">学习资料</string>
    <string name="menu_shopping">购物</string>
    <string name="menu_games">游戏</string>
    <string name="msg_camera_framework_bug">相机被占用或没有相机权限，请检查后重试</string>
    <string name="button_ok">退出</string>
    <string name="menu_edit">编辑</string>
    <string name="menu_add">添加</string>
    <string name="menu_delete">删除</string>
    <string name="menu_cancle">取消</string>
    <string name="title_scan">扫描结果</string>
    <string name="title_message">系统消息</string>
    <string name="hint_note">今天又是美好的一天~</string>
    <string name="hint_message">每天都是现场直播~</string>
    <string name="set_header">修改头像</string>
    <string name="tool_calendar">日历</string>
    <string name="tool_weather">天气</string>
    <string name="tool_note">备忘录</string>
    <string name="tool_express">快递查询</string>
    <string name="tool_led">手机弹幕</string>
    <string name="tool_jokes">冷笑话</string>
    <string name="tool_games">小游戏</string>
    <string name="common_tools">常用工具</string>
    <string name="entertainment_leisure">娱乐休闲</string>

</resources>
