<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_name"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_normal" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autoLink="all"
            android:text="@string/my_telephone"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_normal" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autoLink="all"
            android:text="@string/my_email"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_normal" />

    </LinearLayout>

    <ImageView
        android:id="@id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@mipmap/icon_me_wechat" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/copyright"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_small" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/copyright"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_small" />

</RelativeLayout>