<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/headImage"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@mipmap/ic_launcher"
            app:civ_border_color="#00000000"
            app:civ_border_width="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tViewUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/username"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_normal"
                app:autoSizeTextType="uniform" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:text="@string/email"
                android:textColor="@color/white_gray"
                android:textSize="@dimen/text_size_small"
                app:autoSizeTextType="uniform" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tViewSignture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:maxLines="2"
        android:text="@string/signature"
        android:textColor="@color/white_gray"
        android:textSize="@dimen/text_size_small"
        app:autoSizeTextType="uniform" />

</LinearLayout>
